# ollama-gui

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  index.md  ollama_gui.py  pyproject.toml
.github/workflows/: python-publish.yml
_layouts/: default.html
